--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Arsalan"
-  avatar           : "arsalan-motamedi.github.io/SelfPortrait.jpg"
+  avatar           : "SelfPortrait.jpg"
   bio              : "Grad student of Physics (quantum information) at IQC and UofWaterloo"
   location         : "Waterloo, ON, Canada"
   employer         :
