--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,4 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-    
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Notes"
+    url: /publications/    
